--- a/vue/jest-vue/package.json
+++ b/vue/jest-vue/package.json
@@ -6,10 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit --watch",
+    "test": "vue-cli-service test:unit --watch",
     "test:cov": "vue-cli-service test:unit --coverage"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vuex": "^3.1.3"
